testing new branch

--- a/W3_STIC.Rmd
+++ b/W3_STIC.Rmd
@@ -6,7 +6,7 @@ output: html_document
 editor_options: 
   chunk_output_type: console
 ---
-testing to make sure this works
+testing to make sure this works, new branch
 ```{r}
 #setup
 library(pacman)
