--- a/STICS_2024.qmd
+++ b/STICS_2024.qmd
@@ -22,55 +22,55 @@ source("tidy_hobo_data.R")
 ```
 
 ```{r}
-
-#inputs: folder, ws, deployment
+#modified read_deployment function for summer 24 data
+#inputs: folder, ws
 read_deployment <- function(folder, wshed1){
-#file location
-#folder = "./summer2024/ZZ_summer24/"
+  #file location
+  #folder = "./summer2024/ZZ_summer24/"
                      #   wshed1 = "ZZ"
   
-files <- list.files(folder, pattern = ".csv")
-#deployment info
-deploy <- read.csv("./summer2024/stic2024.csv")
-#filter values must have different names than colnames
-w3 <- filter(deploy, wshed == wshed1)
-w3_n <- na.omit(w3)
-w3_n$start <- mdy_hm(w3_n$start)
-w3_n$end <- mdy_hm(w3_n$stop)
+  files <- list.files(folder, pattern = ".csv")
+  #deployment info
+  deploy <- read.csv("./summer2024/stic2024.csv")
+  #filter values must have different names than colnames
+  w3 <- filter(deploy, wshed == wshed1)
+  w3_n <- na.omit(w3)
+  w3_n$start <- mdy_hm(w3_n$start)
+  w3_n$end <- mdy_hm(w3_n$stop)
 
-sensor_ids <- as.character(w3_n$sensor)
-sensor_num <- (substr(files, 1, 8))
+  sensor_ids <- as.character(w3_n$sensor)
+  sensor_num <- (substr(files, 1, 8))
 
-# r <- c(sensor_ids, sensor_num)
-# r
-# length(unique(r))
-#i <- 12
-alldat <- NA
-for(i in 1:length(sensor_ids)){
-  chosen <- paste0(sensor_ids[i], ".csv") #line to add i
-  tryCatch({
-  path_to_chosen <- paste0(folder, chosen)
-  data <- tidy_hobo_data(path_to_chosen)
-  #  data <- tidy_hobo_data("./summer2024/ZZ_summer24/20011657.csv")
-
-
-  #subset deployment information
-  deployment_info <- filter(w3_n, sensor == sensor_ids[i])
-
-  wet <- classify_wetdry(data,
-                         classify_var = "condUncal",
-                         method = "absolute",
-                         threshold = 10)
-  #remove dates before and after start and end date of deployment
-  wet_filt <- filter(wet, datetime > deployment_info$start) %>%
-    filter(datetime < deployment_info$end) %>% 
-    bind_cols(deployment_info)
+  # r <- c(sensor_ids, sensor_num)
+  # r
+  # length(unique(r))
+  #i <- 12
+  alldat <- NA
+  for(i in 1:length(sensor_ids)){
+    chosen <- paste0(sensor_ids[i], ".csv") #line to add i
+    tryCatch({
+    path_to_chosen <- paste0(folder, chosen)
+    data <- tidy_hobo_data(path_to_chosen)
+    # data <- tidy_hobo_data("./summer2024/ZZ_summer24/20011657.csv")
 
 
-  if(i == 1) alldat <- wet_filt
-  if(i > 1) alldat <- rbind(alldat, wet_filt)
-  }, error=function(e){cat("ERROR :",conditionMessage(e), "\n")})
-}
+    #subset deployment information
+    deployment_info <- filter(w3_n, sensor == sensor_ids[i])
+
+    wet <- classify_wetdry(data,
+                           classify_var = "condUncal",
+                           method = "absolute",
+                           threshold = 10)
+    #remove dates before and after start and end date of deployment
+    wet_filt <- filter(wet, datetime > deployment_info$start) %>%
+      filter(datetime < deployment_info$end) %>% 
+      bind_cols(deployment_info)
+
+
+    if(i == 1) alldat <- wet_filt
+    if(i > 1) alldat <- rbind(alldat, wet_filt)
+    }, error = function(e){cat("ERROR :",conditionMessage(e), "\n")})
+  }
 
 #create new column that indicates if every sensor is deployed or not
 alldat$all_deployed <- 0
@@ -81,61 +81,30 @@ readout <- alldat %>% dplyr::select(-start, -end)
 
 return(readout)
 }
+#converting temperature to Celcius is handled in tidy_hobo_data.R
 
+#create dataframe for each watershed using read in data files function above
 w3_24 <- read_deployment(folder = "./summer2024/W3_summer24/", 
                         wshed1 = "W3")
 fb_24 <- read_deployment(folder = "./summer2024/FB_summer24/", 
                         wshed1 = "FB")
 zz_24 <- read_deployment(folder = "./summer2024/ZZ_summer24/", 
                         wshed1 = "ZZ")
-#got error, was due to spreadsheet having a duplicate record. For trouble shooting in the future- if a for loop fails, if i leave the index as the variable the loop is using, I can try to run each component of the loop on the one that failed.
-w3_3 <- read_deployment(folder = "./HBLoggers_11_14_23/", 
-                        wshed1 = "W3",
-                        deployment1 = 3)
 
-all_w3 <- rbind(w3_1, w3_2, w3_3)
-all_w3$datetime <- with_tz(all_w3$datetime, "US/Eastern")
+#combine all dataframes into one big one
+all_24 <- bind_rows(w3_24, fb_24, zz_24)
 
-fb_1 <- read_deployment(folder = "./FBloggers_7_19_23/", 
-                        wshed1 = "FB",
-                        deployment1 = 1)
-fb_2 <- read_deployment(folder = "./FBloggers_9_20_23/", 
-                        wshed1 = "FB",
-                        deployment1 = 2)
-fb_3 <- read_deployment(folder = "./HBLoggers_11_14_23/", 
-                        wshed1 = "FB",
-                        deployment1 = 3)
-
-all_fb <- rbind(fb_1, fb_2, fb_3)
+#create final spreadsheet for uploading to EDI after combining with my other year of data
+write.csv(all_24, "./summer2024/STICS2024.csv")
+#instead of running all chunks above, just run this line
+data <- read_csv("./summer2024/STICS2024.csv")
 
 
-zz_1 <- read_deployment(folder = "./ZZloggers_7_20_23/", 
-                        wshed1 = "ZZ",
-                        deployment1 = 1)
-zz_2 <- read_deployment(folder = "./ZZloggers_9_21_23/", 
-                        wshed1 = "ZZ",
-                        deployment1 = 2)
-zz_3 <- read_deployment(folder = "./HBLoggers_11_14_23/", 
-                        wshed1 = "ZZ",
-                        deployment1 = 3)
 
-all_zz <- rbind(zz_1, zz_2, zz_3)
-
-all_sheds <- rbind(all_w3, all_fb, all_zz)
-
-#qlist[(which(qlist$Streamflow >= 30)),]
-all_sheds[which.max(all_sheds$tempC),]
-
-all_sheds2 <- all_sheds[-(which(all_sheds$sensor == 20011664)),]
-all_sheds2[which.max(all_sheds2$tempC),]
-
-#convert temperature to degreese celsius, read in as farenheit from hoboware
-all_sheds2$tempC <- (all_sheds2$tempC - 32) * 5/9
-
-#create spreadsheet containing all of the data to send to Danielle Hare
-#write.csv(all_sheds2, "./DataForDanielle/HB_stic.csv")
-#data <- read_csv("./DataForDanielle/HB_stic.csv")
-
+```
+  
+```{r}
+#test figure to display when the sensors were flowing or not flowing
 binary <- c("#DB995A",
             "#586BA4"
   )
@@ -151,9 +120,8 @@ ggplot(w3_24)+
   labs(title = "Streamflow permanence in W3",
        x = "")+
   theme_classic()
-
 ```
-
+  
 ```{r}
 #make the figure above, but without all the weird gaps
 head(filter(w3_24, number == 17))
